--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,8 +41,8 @@ jobs:
         uses: actions/github-script@v6.1.0
         with:
           script: |
-            const id = context.payload.client_payload.value.split('-')[1]
-            core.setOutput('id', id)
+#            const id = context.payload.client_payload.value.split('-')[1]
+#            core.setOutput('id', id)
             const owner = context.repo.owner.value.toLowerCase();
             core.setOutput('owner', owner)
             const repo = context.repo.repo.value.toLowerCase();
