--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,9 +43,9 @@ jobs:
 #            const id = context.payload.client_payload.value.split('-')[1]
 #            core.setOutput('id', id)
           script: |
-            const owner = context.repo.owner.value.toLowerCase()
+            const owner = context.repo.owner.toLowerCase();
             core.setOutput('owner', owner)
-            const repo = context.repo.repo.value.toLowerCase()
+            const repo = context.repo.repo.toLowerCase()
             core.setOutput('repo', repo)
       - run: echo "${{steps.get-id.outputs.id}}"
       - run: echo "${{steps.get-id.outputs.owner}}"
