--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,7 +80,8 @@ jobs:
           echo "CACHE_FROM=type=gha" >>${GITHUB_ENV}
           echo "CACHE_TO=type=gha,mode=max" >>${GITHUB_ENV}
           echo "CACHE_FROM_AMD64=type=gha" >>${GITHUB_ENV}
-          echo "CACHE_TO_AMD64=type=gha,mode=max" >>${GITHUB_ENV}
+          echo "CACHE_TO_AMD64=" >>${GITHUB_ENV}
+          # echo "CACHE_TO_AMD64=type=gha,mode=max" >>${GITHUB_ENV}
         env:
           OWNER: '${{ github.repository_owner }}'
 
